# how2everything

./: .gitignore  README.md  pyproject.toml
examples/bench/: README.md  submit_official_array.sh
examples/bench/configs/: api_only.yaml  judge_existing_generations.yaml  official_benchmark.yaml
examples/mine/: README.md
examples/mine/configs/: mixed_vllm_extract_openai_rest.yaml  openai_sync.yaml  openai_sync_no_topics.yaml
examples/train/: README.md  dedup_against_test.py  peek_arrow.py
how2everything/: __init__.py  __main__.py  cli.py
how2everything/bench/: __init__.py  aggregate.py  config.py  dataset.py  generate.py  io_utils.py  judge.py  leaderboard.py  pipeline.py  runner.py  schemas.py
how2everything/bench/slurm/: __init__.py  run_one_official_task.py
how2everything/llm/: __init__.py  deluge_client.py  vllm_client.py
how2everything/mine/: __init__.py  config.py  document_sources.py  export_utils.py  io_utils.py  pipeline.py  prefilter.py  runner.py  schemas.py  status.py
prompts/: extract_procedures.txt  extract_resources.txt  filter.txt  final_filter.txt  inference_base.txt  inference_inst.txt  judge.txt  postprocess.txt
